--- a/master-compose.yml
+++ b/master-compose.yml
@@ -68,7 +68,7 @@ services:
 
 
     gitea-db:
-        image: postgres:alpine
+        image: postgres:14-alpine
         container_name: gitea-chitragupta
         restart: always
         volumes:
@@ -129,7 +129,7 @@ services:
 
 
     nextcloud-db:
-        image: postgres:alpine
+        image: postgres:14-alpine
         container_name: nextcloud-chitragupta
         restart: always
         volumes:
@@ -182,22 +182,22 @@ services:
             - TZ=Asia/Kolkata
 
 
-    transmission-web:
-        image: lscr.io/linuxserver/transmission:latest
-        container_name: transmission-raadhe
-        restart: always
-        ports:
-            - "8050:9091"           # transmission web-ui
-            - "8051:51413"          # torrent port TCP
-            - "8052:51413/udp"      # torrent port UDP
-        volumes:
-            - /trayimurti/torrents/downloads:/downloads:Z
-            - /trayimurti/torrents/config:/config:Z
-        labels:
-            - io.containers.autoupdate=registry
-            - pratham.container.category=torrent
-        environment:
-            - TZ=Asia/Kolkata
+#    transmission-web:
+#        image: lscr.io/linuxserver/transmission:latest
+#        container_name: transmission-raadhe
+#        restart: always
+#        ports:
+#            - "8050:9091"           # transmission web-ui
+#            - "8051:51413"          # torrent port TCP
+#            - "8052:51413/udp"      # torrent port UDP
+#        volumes:
+#            - /trayimurti/torrents/downloads:/downloads:Z
+#            - /trayimurti/torrents/config:/config:Z
+#        labels:
+#            - io.containers.autoupdate=registry
+#            - pratham.container.category=torrent
+#        environment:
+#            - TZ=Asia/Kolkata
 
 
 secrets:
