Caddyfile: spaces instead of tabs

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,124 +1,127 @@
 blog.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	reverse_proxy hugo-vaikunthnatham:1313
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    reverse_proxy hugo-vaikunthnatham:1313
 }
 
 thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://blog.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://blog.thefossguy.com{uri}
 }
 
 www.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://blog.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://blog.thefossguy.com{uri}
 }
 
 
 
 git.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	reverse_proxy gitea-govinda:3000
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    reverse_proxy gitea-govinda:3000
 }
 
 src.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://git.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://git.thefossguy.com{uri}
 }
 
 
 
 mach.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	reverse_proxy hugo-mahayogi:1313
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    reverse_proxy hugo-mahayogi:1313
 }
 
 fuck.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://mach.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://mach.thefossguy.com{uri}
 }
-
 
 
 cloud.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
 
-	rewrite /.well-known/carddav /remote.php/dav
-	rewrite /.well-known/caldav /remote.php/dav
+    rewrite /.well-known/carddav /remote.php/dav
+    rewrite /.well-known/caldav /remote.php/dav
 
-	reverse_proxy nextcloud-govinda:80
+    reverse_proxy nextcloud-govinda:80
 }
 
 storage.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com{uri}
 }
 
 
 
 notes.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/notes{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/notes{uri}
 }
 
 keep.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/notes{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/notes{uri}
 }
 
 
 
 contacts.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/contacts{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/contacts{uri}
 }
 
 people.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/contacts{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/contacts{uri}
+}
+
+
+
+calendar.thefossguy.com {
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/calendar{uri}
 }
 
 
 
 photos.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/photos{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/photos{uri}
 }
 
 images.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/photos{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/photos{uri}
 }
 
 
 
 videos.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://cloud.thefossguy.com/apps/videos{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://cloud.thefossguy.com/apps/videos{uri}
 }
 
 
 
 admin.thefossguy.com {
-	reverse_proxy https://10.0.0.19:9090 {
-		transport http {
-			tls_insecure_skip_verify
-		}
-	}
+    reverse_proxy https://10.0.0.19:9090 {
+        transport http {
+            tls_insecure_skip_verify
+        }
+    }
 }
 
 cockpit.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://admin.thefossguy.com{uri}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    redir https://admin.thefossguy.com{uri}
 }
-
 
 
 torr.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	reverse_proxy transmission-raadhe:9091
-}
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    basicauth {
 
-torrs.thefossguy.com {
-	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
-	redir https://torr.thefossguy.com{uri}
+    }
+    reverse_proxy 10.0.0.14:9091
 }
