master-compose: nextcloud-web: since nextcloud-cron is no longer used, switch back to a private and unshared selinux label for bind mount

--- a/master-compose.yml
+++ b/master-compose.yml
@@ -108,7 +108,7 @@ services:
         ports:
             - "8030:80"
         volumes:
-            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:z
+            - /trayimurti/containers/volumes/nextcloud/web:/var/www/html:Z
         labels:
             - io.containers.autoupdate=registry
             - pratham.container.category=cloud
