--- a/master-compose.yml
+++ b/master-compose.yml
@@ -27,6 +27,7 @@ services:
             - thefossguy-blog
             - nextcloud-web
             - thefossguy-mach
+            - gotify-server
             - transmission-raadhe
 
 
@@ -185,14 +186,29 @@ services:
             - TZ=Asia/Kolkata
 
 
+    gotify-server:
+        image: docker.io/gotify/server-arm64:latest
+        container_name: gotify-akashvani
+        restart: always
+        ports:
+            - "8050:80"
+        volumes:
+            - /trayimurti/containers/volumes/gotify:/app/data:Z
+        labels:
+            - io.containers.autoupdate=registry
+            - pratham.container.category=gotify
+        environment:
+            - TZ=Asia/Kolkata
+
+
     transmission-web:
         image: lscr.io/linuxserver/transmission:latest
         container_name: transmission-raadhe
         restart: always
         ports:
-            - "8050:9091"           # transmission web-ui
-            - "8051:51413"          # torrent port TCP
-            - "8052:51413/udp"      # torrent port UDP
+            - "8060:9091"           # transmission web-ui
+            - "8061:51413"          # torrent port TCP
+            - "8062:51413/udp"      # torrent port UDP
         volumes:
             - /trayimurti/torrents/downloads:/downloads:Z
             - /trayimurti/torrents/config:/config:Z
