changes made in this commit:
 - add service uptimekuma in compose and Caddyfile
 - reorganize services and change ports appropriately

--- a/Caddyfile
+++ b/Caddyfile
@@ -125,3 +125,8 @@ torr.thefossguy.com {
     }
     reverse_proxy 10.0.0.14:9091
 }
+
+uptime.thefossguy.com {
+    tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+    reverse_proxy uptime-vishnu:3001
+}
