master-compose: fix typo of dependency of caddy on transmission

--- a/master-compose.yml
+++ b/master-compose.yml
@@ -29,7 +29,7 @@ services:
             - nextcloud-web
             - gotify-server
             - uptimekuma-server
-            - transmission-raadhe
+            - transmission-web
 
 ################################################################################
 
