master-compose: uptime-kuma: depend on gitea, hugo, nextcloud and gotify

--- a/master-compose.yml
+++ b/master-compose.yml
@@ -200,6 +200,12 @@ services:
             - pratham.container.category=uptime
         environment:
             - TZ=Asia/Kolkata
+        depends_on:
+            - gitea-web
+            - thefossguy-blog
+            - thefossguy-mach
+            - nextcloud-web
+            - gotify-server
 
 ################################################################################
 
